[metadata]
name = usm
description = Create the skeleton for a python package/project
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/usoftman/usm
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    usm = usm.__main__:main
